feat: theme registry

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/drei": "^9.99.0",
     "@react-three/fiber": "^8.15.16",
     "@uidotdev/usehooks": "^2.4.1",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.5",
     "lucide-react": "^0.338.0",
@@ -20,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "three": "^0.161.0"
   },
   "devDependencies": {
