--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.0.2",
     "@react-three/drei": "^9.99.0",
     "@react-three/fiber": "^8.15.16",
     "@supabase/auth-helpers-nextjs": "^0.9.0",
